--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "chai": "^4.3.6",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
